--- a/html_css-js.html
+++ b/html_css-js.html
@@ -17,12 +17,9 @@
         <div id="home">
             <span id="home_txt" onclick="location.href='index.html'">Home</span>
         </div>
-        <div id="contact">
+        <div id="contact" onclick="location.href='contact.html'">
             <span id="contact_txt">Contact</span>
-        </div>
-        <div id="credits">
-            <span id="credits_txt">Credits</span>
-        </div>
+        </div>>
     </div>    
     <div id="apartats">
         
