--- a/unity.html
+++ b/unity.html
@@ -76,10 +76,7 @@
             <span id="home_txt" onclick="location.href='index.html'">Home</span>
         </div>
         <div id="contact">
-            <span id="contact_txt">Contact</span>
-        </div>
-        <div id="credits">
-            <span id="credits_txt">Credits</span>
+            <span id="contact_txt" onclick="location.href='contact.html'">Contact</span>
         </div>
     </div>    
     <div id="apartats">
